<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/player_text">

        <EditTextPreference
            app:key="name"
            app:icon="@drawable/ic_baseline_person_24"
            app:title="@string/name_text"
            app:defaultValue="@string/name_default"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:title="@string/difficulty_setting_text"
            app:key="difficulty"
            app:icon="@drawable/ic_baseline_speed_24"
            app:entries="@array/difficulty_entries"
            app:entryValues="@array/difficulty_values"
            app:defaultValue="MEDIUM"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_and_image">

        <SwitchPreferenceCompat
            app:key="music"
            app:title="@string/checkbox_music"
            app:icon="@drawable/ic_baseline_music_note_24"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="ghost_block"
            app:summaryOff="@string/ghost_block_mode_off"
            app:summaryOn="@string/ghost_block_mode_on"
            app:title="@string/checkbox_ghostblock"
            app:icon="@drawable/ic_ghost_svgrepo_com"
            app:defaultValue="true"/>

        <ListPreference
            app:title="@string/theme_text"
            app:key="theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:icon="@drawable/ic_baseline_style_24"
            app:defaultValue="NEON"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>