<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.game.GameActivity">

    <GridView
        android:id = "@+id/GameGrid"
        android:layout_width="310dp"
        android:layout_height="620dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:numColumns="10"
        app:layout_constraintVertical_bias="0.132" />

    <ImageButton
        android:id="@+id/LeftButton"
        android:layout_width="73dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightButton"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameGrid"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/LeftButtonDesc" />

    <ImageButton
        android:id="@+id/DownButton"
        android:layout_width="72dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RightButton"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/LeftButton"
        app:layout_constraintTop_toBottomOf="@+id/GameGrid"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/DownButtonDesc" />

    <ImageButton
        android:id="@+id/RightButton"
        android:layout_width="71dp"
        android:layout_height="67dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameGrid"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/RightButtonDesc" />

    <ImageButton
        android:id="@+id/RotateLeft"
        android:layout_width="67dp"
        android:layout_height="68dp"
        android:src="@drawable/rotateleft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LeftButton"
        app:layout_constraintVertical_bias="0.208"
        android:contentDescription="@string/RotateLeftDesc" />

    <ImageButton
        android:id="@+id/RotateRight"
        android:layout_width="69dp"
        android:layout_height="62dp"
        android:src="@drawable/rotateright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toEndOf="@+id/RotateLeft"
        app:layout_constraintTop_toBottomOf="@+id/RightButton"
        app:layout_constraintVertical_bias="0.202"
        android:contentDescription="@string/RotateRightDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>