<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.help.HelpActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/TetrisExplanationText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_text"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="68dp" />

        <ImageView
            android:id="@+id/info_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="7dp"
            android:src="@drawable/helpicon"
            tools:layout_editor_absoluteX="240dp"
            tools:layout_editor_absoluteY="19dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/TetrisExplanationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tetris_explanation"
        app:layout_constraintBottom_toTopOf="@+id/TetrisVideo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


    <VideoView
        android:id="@+id/TetrisVideo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/BackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TetrisExplanationText" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TetrisVideo" />
</androidx.constraintlayout.widget.ConstraintLayout>